# Face-Recognition-Clustering-API

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  mongo.py
app/db/: cluster_assignment_operations.py  face_clustering_operations.py  user_profile_operations.py
app/models/: cluster_assignments.py  face_clustering.py  face_clustering_models.py  user_profile.py
app/routers/: bucket_clustering.py  cluster_assignment.py  s3_debug.py  user_profile.py
app/schemas/: clustering.py  detection.py
app/services/: S3_functions.py  ai.py  batch_processor.py  calculations.py  cluster_linker.py  clustering_service.py  connection.py  crop_face.py  face_detection_service.py  improved_face_clustering.py  memory_utils.py  performance_metric.py  person_based_clustering_pipeline.py  qdrant_service.py  resnet.py  storage.py  wasabi_structure_service.py  yolo_detector.py
app/services/optimized_clustering/: __init__.py  optimized_clustering_with_db.py
qdrant_data/: raft_state.json
